--- a/drumKit.css
+++ b/drumKit.css
@@ -6,14 +6,15 @@
 body{
     background-image: url(pianoproject.jpg);
     background-size: cover;
+    background-repeat: no-repeat;
 }
 .container{
     display: flex;
-    background-color: brown;
+    background-color: rgba(126, 28, 28, 0.3);
     position:relative;
     top:500px;
     justify-content: center;
-    opacity:0.3;
+
 
 }
 .key{
@@ -22,4 +23,7 @@ body{
     margin:20px ;
     text-align: center;
     background-color: azure;
+    font-size: larger;
+    font-weight: bolder;
+    color: rgb(15, 15, 54);
 }
