--- a/drumKit.css
+++ b/drumKit.css
@@ -27,3 +27,7 @@ body{
     font-weight: bolder;
     color: rgb(15, 15, 54);
 }
+.enhance{
+    border: 2px solid yellow;
+    background-color: green;
+}
